decode-dimms: Fix DDR3 extended temp range refresh rate decoding
Based on a patch from Peter Missel. The meaning of byte 31, bit 1,
was inverted. Also, this bit is only meaningful if the extended
temperature range is supported (bit 0 is set.)


git-svn-id: http://lm-sensors.org/svn/i2c-tools/trunk@6249 7894878c-1315-0410-8ee3-d5d059ff63e0

--- a/CHANGES
+++ b/CHANGES
@@ -36,6 +36,7 @@ SVN HEAD
                 Don't print raw SSTE32882 register values
                 Add support for Load Reduced DIMM (LRDIMM) DDR3 modules
                 Fully decode the DDR3 SDRAM Device Type field
+                Fix DDR3 extended temp range refresh rate decoding
                 Encode "degrees" to HTML degree symbol
                 Generate XHTML 1.1 compliant markup
                 Add a manual page
