Mention the current maintainer. Original patch from Wolfram Sang.
git-svn-id: http://lm-sensors.org/svn/i2c-tools/trunk@6261 7894878c-1315-0410-8ee3-d5d059ff63e0

--- a/README
+++ b/README
@@ -91,5 +91,7 @@ QUESTIONS AND BUG REPORTS
 
 Please post your questions and bug reports to the linux-i2c mailing list:
   linux-i2c@vger.kernel.org
+with Cc to the current maintainer:
+  Jean Delvare <jdelvare@suse.de>
 For additional information about this list, see:
   http://vger.kernel.org/vger-lists.html#linux-i2c
