py-smbus: Add support for python 3
git-svn-id: http://lm-sensors.org/svn/i2c-tools/trunk@6267 7894878c-1315-0410-8ee3-d5d059ff63e0

--- a/CHANGES
+++ b/CHANGES
@@ -55,6 +55,7 @@ SVN HEAD
            Use I2C_SMBUS_BLOCK_MAX instead of hard-coding 32
   lib/smbus.c: Add missing include which was causing a build error
   py-smbus: Fix module level docs
+            Add support for python 3
 
 3.1.0 (2011-12-04)
   decode-dimms: Decode module configuration type of DDR SDRAM
